package com.florentina.location;

public enum LocationType {
    LANDMARK,
    CITY,
    USER_LOCATION
}
